# homebrew-archimedes

./: README.md  arcl.rb.jinja2  pyproject.toml  sha256.py
.github/workflows/: make-arcl-release.yml  make-release.yml  tests.yml
Formula/: arcl.rb
