[tool.poetry]
name = "homebrew-archimedes"
version = "0.1.0"
description = "Package for building arcl macOS binaries"
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
arcl = "1.7.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
