[tool.poetry]
name = "homebrew-archimedes"
version = "0.1.1"
description = "Package for building arcl macOS binaries"
authors = ["Optimeering AS <dev@optimeering.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
arcl = "2.0.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
